# yt-dl_GUI

./: README.md  build.ps1  pyproject.toml
.github/workflows/: release.yml
src/app/: api.py  deps.py  main.py  runner.py  updater.py
src/assets/: yt-dlp-gui.icns
src/ui/: app.css  app.js  index.html
src/ui/css/: app.css  base.css  layout.css  overlays.css  theme.css
