[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dlp-gui"
version = "1.3.0"
description = "A GUI wrapper for yt-dlp using pywebview"
requires-python = ">=3.10"
dependencies = [
  "pywebview>=5.0",
  "yt-dlp>=2026.2.4",
  "yt-dlp-ejs>=0.4.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.yt-dlp-gui]
system-requires = ["ffmpeg", "deno"]
